# thesis-TEKO

./: .gitignore  bibliography.yaml  metadata.typ  references.bib  template.typ  thesis.typ
code_examples/amqp091-go/: go.mod  main.go
code_examples/axum_examples/axum_extractors/: Cargo.toml
code_examples/axum_examples/axum_extractors/src/: main.rs
code_examples/axum_examples/axum_responses/: Cargo.toml
code_examples/axum_examples/axum_responses/src/: main.rs
code_examples/axum_examples/hello_axum/: Cargo.toml
code_examples/axum_examples/hello_axum/src/: main.rs
code_examples/lapin_test/: Cargo.toml
code_examples/lapin_test/src/: main.rs
code_examples/rabbitmq-java-client/: .project  pom.xml
code_examples/rabbitmq-java-client/src/main/java/io/integon/: App.java
code_examples/rabbitmq-java-client/src/test/java/io/integon/: AppTest.java
content/: API_lib.typ  Abstract.typ  Configuration_management.typ  Evaluation.typ  Executive_summary.typ  Implementation.typ  Introduction.typ  Projectplan.typ  Requirements.typ  Research.typ  Task_analysis.typ  Use_cases.typ  Verification.typ  annexes.typ
